# netscope

./: .gitignore  README.md  RELEASE_NOTES_v0.4.md  ROADMAP.md  SPEC.md
.claude/: launch.json
.github/workflows/: build-agent.yml  build-desktop.yml  build-ebpf.yml  build-hub.yml  deploy-website.yml  publish-hub-images.yml
agent/: Cargo.toml
agent/.cargo/: config.toml
agent/crates/capture/: Cargo.toml
agent/crates/capture-windows/: Cargo.toml
agent/crates/capture-windows/src/: interface.rs  lib.rs  process.rs
agent/crates/capture/src/: interface.rs  lib.rs  tcp_stream.rs
agent/crates/config/: Cargo.toml
agent/crates/config/src/: lib.rs
agent/crates/ebpf-common/: Cargo.toml
agent/crates/ebpf-common/src/: lib.rs
agent/crates/ebpf-loader/: Cargo.toml
agent/crates/ebpf-loader/src/: go_tls.rs  lib.rs  python_ssl.rs  ssl.rs  tcp.rs
agent/crates/parser/: Cargo.toml
agent/crates/parser/src/: dns.rs  http.rs  http2.rs  lib.rs  session.rs  tls.rs
agent/crates/proto/: Cargo.toml
agent/crates/proto/src/: lib.rs
agent/ebpf/: Cargo.toml
agent/ebpf/.cargo/: config.toml
agent/ebpf/src/: main.rs  ssl.rs  tcp.rs
agent/src/: hub_client.rs  main.rs
agent/xtask/: Cargo.toml
agent/xtask/src/: main.rs
desktop/: index.html  package-lock.json  package.json  tailwind.config.ts
desktop/.claude/: launch.json
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  db.rs  dto.rs  geoip.rs  hub.rs  lib.rs  main.rs  state.rs  threat.rs
desktop/src/components/: AnalyticsPane.tsx  CertSidebar.tsx  ErrorBoundary.tsx  FilterBar.tsx  FleetPane.tsx  GeoIpBanner.tsx  HexDumpPane.tsx  HubConnectModal.tsx  InterfaceSelector.tsx  OnboardingWizard.tsx  OtelTracePanel.tsx  PacketDetailPane.tsx  PacketListPane.tsx  PrivilegeModal.tsx  ServiceMapPane.tsx  StatusBar.tsx  UpdateBanner.tsx
desktop/src/components/ui/: badge.tsx  button.tsx  input.tsx
desktop/src/lib/: utils.ts
desktop/src/store/: captureStore.ts
desktop/src/types/: fleet.ts  flow.ts
helm/netscope/: Chart.yaml  values.yaml
helm/netscope/templates/: _helpers.tpl  agent-daemonset.yaml  hpa.yaml  hub-deployment.yaml  ingress.yaml  secret.yaml  web-deployment.yaml
hub/: .env.example  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
hub/api/: .env.example  Dockerfile  go.mod  go.sum  main.go
hub/api/alerting/: delivery.go  evaluator.go  reports.go  smtp.go
hub/api/baseline/: engine.go
hub/api/clickhouse/: client.go  writer.go
hub/api/cloud/: aws.go  azure.go  gcp.go  ingester.go  parser.go
hub/api/config/: config.go
hub/api/copilot/: client.go
hub/api/enterprise/compliance/: frameworks.go  renderer.go  scheduler.go
hub/api/enterprise/incidents/: dispatcher.go  jira.go  linear.go
hub/api/enterprise/license/: license.go
hub/api/enterprise/scim/: handler.go
hub/api/enterprise/sigma/: engine.go
hub/api/enterprise/sinks/: sinks.go
hub/api/enterprise/sso/: oidc.go  saml.go
hub/api/enterprise/storage/: exporter.go
hub/api/geoip/: geoip.go
hub/api/handlers/: agents.go  alerts.go  analytics.go  anomalies.go  audit.go  auth.go  certs.go  cloud.go  compliance.go  compliance_reports.go  copilot.go  dashboards.go  enrollment.go  fleet.go  flows.go  incidents.go  integrations.go  invite.go  metrics.go  orgs.go  otel.go  policies.go  saved_queries.go  services.go  sigma.go  stats.go  storage.go  threats.go  tokens.go
hub/api/kafka/: producer.go
hub/api/metrics/: metrics.go
hub/api/middleware/: audit.go  auth.go  ratelimit.go
hub/api/models/: agent.go  alert.go  analytics.go  cert.go  cloud.go  compliance.go  compliance_report.go  enrollment.go  fleet.go  flow.go  incident.go  org.go  policy.go  rbac.go
hub/api/pubsub/: hub.go
hub/api/sessions/: store.go
hub/api/threat/: scorer.go
hub/api/util/: errors.go  ssrf.go
hub/caddy/: Caddyfile
hub/enterprise/: LICENSE
hub/web/: .env.example  Dockerfile  middleware.ts  package-lock.json  package.json  tailwind.config.ts
hub/web/app/: globals.css  layout.tsx  page.tsx
hub/web/app/accept-invite/: page.tsx
hub/web/app/agents/: page.tsx
hub/web/app/alerts/: page.tsx
hub/web/app/analytics/: page.tsx
hub/web/app/anomalies/: page.tsx
hub/web/app/certs/: page.tsx
hub/web/app/cloud/: page.tsx
hub/web/app/compliance/: page.tsx
hub/web/app/compliance/reports/: page.tsx
hub/web/app/dashboards/: page.tsx
hub/web/app/fleet/: page.tsx
hub/web/app/flows/: page.tsx
hub/web/app/forgot-password/: page.tsx
hub/web/app/incidents/: page.tsx
hub/web/app/login/: page.tsx
hub/web/app/policies/: page.tsx
hub/web/app/reset-password/: page.tsx
hub/web/app/roadmap/: page.tsx
hub/web/app/services/: page.tsx
hub/web/app/settings/: layout.tsx  page.tsx
hub/web/app/setup/: page.tsx
hub/web/app/sigma/: page.tsx
hub/web/app/threats/: page.tsx
hub/web/components/: AgentList.tsx  CopilotPanel.tsx  DashboardGrid.tsx  EnterpriseGate.tsx  FlowTable.tsx  FlowsChart.tsx  LiveFeed.tsx  ProtocolChart.tsx  ServiceGraph.tsx  Sidebar.tsx  StatsCards.tsx  UserMenu.tsx
hub/web/components/widgets/: AlertFeedWidget.tsx  AnomalyFeedWidget.tsx  ProtocolPieWidget.tsx  StatWidget.tsx  TimeseriesWidget.tsx  TopTalkersWidget.tsx
hub/web/lib/: api.ts  dashboard.ts
k8s/: agent-daemonset.yaml  hpa.yaml  hub-configmap.yaml  hub-deployment.yaml  hub-secret.yaml  hub-web-deployment.yaml  ingress.yaml  namespace.yaml
proto/: netscope.proto
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: build_dashboard.py  copilot_chat.py  export_flows_csv.py  hunt_threats.py
sdk/python/netscope_sdk/: __init__.py  client.py  exceptions.py
sdk/python/netscope_sdk/models/: __init__.py
sdk/python/netscope_sdk/resources/: __init__.py  agents.py  alerts.py  anomalies.py  copilot.py  dashboards.py  flows.py  incidents.py  sigma.py
sdk/python/tests/: test_models.py
website/: docs.html  hub-quickstart.sh  index.html  install.sh
(+9 files in other folders)
