[workspace]
members = [".", "crates/capture", "crates/parser", "crates/proto", "crates/config"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[package]
name = "netscope-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "netscope-agent"
path = "src/main.rs"

[dependencies]
capture = { path = "crates/capture" }
parser = { path = "crates/parser" }
proto = { path = "crates/proto" }
config = { path = "crates/config" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
