[workspace]
members = [
    ".",
    "crates/capture",
    "crates/capture-windows",
    "crates/parser",
    "crates/proto",
    "crates/config",
    "crates/ebpf-common",
    "crates/ebpf-loader",
]
# xtask and ebpf/ are intentionally excluded — they use a different build target.
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[package]
name = "netscope-agent"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "netscope-agent"
path = "src/main.rs"

[dependencies]
capture = { path = "crates/capture" }
parser = { path = "crates/parser" }
proto = { path = "crates/proto" }
config = { path = "crates/config" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
gethostname = "0.4"

# eBPF mode — Linux-only, opt-in via `--features ebpf`
[target.'cfg(target_os = "linux")'.dependencies]
ebpf-loader = { path = "crates/ebpf-loader", optional = true }

# Windows capture backend (Enterprise)
[target.'cfg(target_os = "windows")'.dependencies]
capture-windows = { path = "crates/capture-windows" }

[features]
ebpf = ["dep:ebpf-loader"]
