# BPF kernel programs — compiled to bpfel-unknown-none.
# Declared as its own workspace so Cargo does not merge it into the agent
# workspace (which targets the host). The [workspace] table must come before
# [package] to be recognised correctly.
[workspace]

[package]
name = "netscope-ebpf"
version = "0.5.0"
edition = "2021"
publish = false

[[bin]]
name = "netscope-ebpf"
path = "src/main.rs"

[dependencies]
aya-bpf  = "0.1"
aya-log-ebpf = "0.1"
ebpf-common  = { path = "../crates/ebpf-common", default-features = false, features = ["bpf"] }

[profile.release]
# Strip debug symbols and panic strings to keep the BPF object small.
panic = "abort"
lto   = true
opt-level = "z"
