[package]
name = "netscope-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "netscope_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros", "chrono"] }
# Shared crates from the agent workspace
capture = { path = "../../agent/crates/capture" }
parser  = { path = "../../agent/crates/parser" }
proto   = { path = "../../agent/crates/proto" }
config  = { path = "../../agent/crates/config" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
