[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "netscope-sdk"
version = "0.6.0"
description = "Python SDK for the NetScope Hub API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "NetScope", email = "hello@netscope.io" }]
keywords = ["netscope", "network", "observability", "security", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Security",
]
requires-python = ">=3.9"
# Zero required runtime dependencies — stdlib only.
dependencies = []

[project.optional-dependencies]
# Install 'requests' for a more ergonomic sync client (optional).
requests = ["requests>=2.28"]
# Install 'httpx' for async support.
async = ["httpx>=0.25"]
# Install all extras + dev tools.
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "mypy>=1.4",
    "ruff>=0.1",
]

[project.urls]
Homepage      = "https://netscope.io"
Documentation = "https://netscope.io/docs"
Repository    = "https://github.com/Libinm264/netscope"
"Bug Tracker" = "https://github.com/Libinm264/netscope/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["netscope_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
