[package]
name    = "capture-windows"
version = "0.5.0"
edition = "2021"
description = "Npcap/WinPcap packet capture backend for the NetScope Windows agent (Enterprise)"

# Only compiled on Windows.
[target.'cfg(target_os = "windows")'.dependencies]
pcap    = { version = "2" }  # npcap feature removed in pcap v2; npcap links via build.rs
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_NetworkManagement_IpHelper",
] }
anyhow  = "1"
tokio   = { version = "1", features = ["rt", "sync", "time"] }
tracing = "0.1"
chrono  = { version = "0.4", features = ["serde"] }
