[package]
name = "ebpf-common"
version = "0.5.0"
edition = "2021"

# This crate is shared between the BPF kernel programs (no_std) and the
# userspace loader, so it must remain no_std + no alloc.
[lib]
name = "ebpf_common"

[features]
default = ["userspace"]
# Enable when compiling for the BPF target (no_std, no alloc)
bpf = []
# Enable when compiling for userspace (std available).
# Pulls in aya so we can impl aya::Pod for the shared event types.
userspace = ["dep:aya"]

[dependencies]
# Optional: only needed in userspace builds for the Pod trait impls.
aya = { version = "0.13", optional = true }
