[package]
name = "ebpf-loader"
version = "0.5.0"
edition = "2021"

# This crate is Linux-only — the eBPF subsystem is not available elsewhere.
[target.'cfg(target_os = "linux")'.dependencies]
aya              = { version = "0.13", features = ["async_tokio"] }
aya-log          = "0.2"
ebpf-common      = { path = "../ebpf-common", features = ["userspace"] }
tokio            = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
serde            = { workspace = true }
serde_json       = "1"
reqwest          = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid             = { version = "1", features = ["v4"] }
chrono           = { workspace = true }
libc             = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
