[package]
name = "parser"
version = "0.5.0"
edition = "2021"

[dependencies]
proto = { path = "../proto" }
capture = { path = "../capture" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
httparse = "1"
hpack = "0.3"
etherparse = "0.15"
x509-parser = { version = "0.15", default-features = false }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
pcap = "2"
